--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -674,7 +674,6 @@
     "class Convertisseur:\n",
     "    def __init__(self, temperature_celcius):\n",
     "        self.celcius = temperature_celcius\n",
-    "        self.kelvin = temperature_celcius + 273\n",
     "    \n",
     "    def get_celcius(self):\n",
     "        return self.celcius\n",
@@ -707,8 +706,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "c2d15c80-a73c-4967-9c67-227eeb9635dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.celcius = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "e3450ae8-402e-4837-9df3-d06de60d33f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "283"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.set_kelvin(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8edc933-9597-429a-998e-beee862e17ec",
    "metadata": {},
    "outputs": [],
    "source": []
