--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "id": "5b157d8a-fd2d-4a08-ba1a-63594c7c9753",
    "metadata": {},
    "outputs": [],
@@ -674,20 +674,16 @@
     "class Convertisseur:\n",
     "    def __init__(self, temperature_celcius):\n",
     "        self.celcius = temperature_celcius\n",
-    "    \n",
-    "    def get_celcius(self):\n",
-    "        return self.celcius\n",
     "\n",
-    "    def set_celcius(self, value):\n",
-    "        self.celcius = value\n",
-    "\n",
-    "    def get_kelvin(self):\n",
-    "        return self.kelvin"
+    "    @property\n",
+    "    def kelvin(self):\n",
+    "        print(\"dans get kelvin\")\n",
+    "        return self.celcius + 273\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 96,
    "id": "1776f3cf-df4c-4c6a-85e7-8b27cb3d4d03",
    "metadata": {},
    "outputs": [
@@ -695,13 +691,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 283 283 10\n"
+      "dans get kelvin\n",
+      "283 10\n"
      ]
     }
    ],
    "source": [
     "c = Convertisseur(10)\n",
-    "print(c.get_celcius(), c.get_kelvin(), c.kelvin, c.celcius)"
+    "print(c.kelvin, c.celcius)"
    ]
   },
   {
@@ -716,19 +713,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "id": "e3450ae8-402e-4837-9df3-d06de60d33f2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "283"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Convertisseur' object has no attribute 'set_kelvin'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[90], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_kelvin\u001b[49m(\u001b[38;5;241m40\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Convertisseur' object has no attribute 'set_kelvin'"
+     ]
     }
    ],
    "source": [
