--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 97,
    "id": "5b157d8a-fd2d-4a08-ba1a-63594c7c9753",
    "metadata": {},
    "outputs": [],
@@ -678,12 +678,16 @@
     "    @property\n",
     "    def kelvin(self):\n",
     "        print(\"dans get kelvin\")\n",
-    "        return self.celcius + 273\n"
+    "        return self.celcius + 273\n",
+    "\n",
+    "    @kelvin.setter\n",
+    "    def kelvin(self, value):\n",
+    "        self.celcius = value - 273"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 98,
    "id": "1776f3cf-df4c-4c6a-85e7-8b27cb3d4d03",
    "metadata": {},
    "outputs": [
@@ -703,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 99,
    "id": "c2d15c80-a73c-4967-9c67-227eeb9635dd",
    "metadata": {},
    "outputs": [],
@@ -713,30 +717,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "id": "e3450ae8-402e-4837-9df3-d06de60d33f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.kelvin = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "e8edc933-9597-429a-998e-beee862e17ec",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Convertisseur' object has no attribute 'set_kelvin'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[90], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_kelvin\u001b[49m(\u001b[38;5;241m40\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Convertisseur' object has no attribute 'set_kelvin'"
-     ]
+     "data": {
+      "text/plain": [
+       "-253"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.set_kelvin(40)"
+    "c.celcius"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8edc933-9597-429a-998e-beee862e17ec",
+   "id": "7516d1eb-2b00-447a-9696-be9cce0f39d7",
    "metadata": {},
    "outputs": [],
    "source": []
