--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 112,
    "id": "5b157d8a-fd2d-4a08-ba1a-63594c7c9753",
    "metadata": {},
    "outputs": [],
@@ -682,12 +682,14 @@
     "\n",
     "    @kelvin.setter\n",
     "    def kelvin(self, value):\n",
+    "        if value < 0:\n",
+    "            raise ValueError(\"should be positive\")\n",
     "        self.celcius = value - 273"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 108,
    "id": "1776f3cf-df4c-4c6a-85e7-8b27cb3d4d03",
    "metadata": {},
    "outputs": [
@@ -707,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
    "id": "c2d15c80-a73c-4967-9c67-227eeb9635dd",
    "metadata": {},
    "outputs": [],
@@ -717,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 110,
    "id": "e3450ae8-402e-4837-9df3-d06de60d33f2",
    "metadata": {},
    "outputs": [],
@@ -727,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 111,
    "id": "e8edc933-9597-429a-998e-beee862e17ec",
    "metadata": {},
    "outputs": [
@@ -737,7 +739,7 @@
        "-253"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
