--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -666,30 +666,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 115,
    "id": "5b157d8a-fd2d-4a08-ba1a-63594c7c9753",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Convertisseur:\n",
     "    def __init__(self, temperature_celcius):\n",
-    "        self.celcius = temperature_celcius\n",
+    "        self.__celcius = temperature_celcius\n",
     "\n",
     "    @property\n",
     "    def kelvin(self):\n",
     "        print(\"dans get kelvin\")\n",
-    "        return self.celcius + 273\n",
+    "        return self.__celcius + 273\n",
     "\n",
     "    @kelvin.setter\n",
     "    def kelvin(self, value):\n",
     "        if value < 0:\n",
     "            raise ValueError(\"should be positive\")\n",
-    "        self.celcius = value - 273"
+    "        self.__celcius = value - 273"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 117,
    "id": "1776f3cf-df4c-4c6a-85e7-8b27cb3d4d03",
    "metadata": {},
    "outputs": [
@@ -697,14 +697,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dans get kelvin\n",
-      "283 10\n"
+      "dans get kelvin\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Convertisseur' object has no attribute '__celcius'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[117], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m c \u001b[38;5;241m=\u001b[39m Convertisseur(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(c\u001b[38;5;241m.\u001b[39mkelvin, \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__celcius\u001b[49m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Convertisseur' object has no attribute '__celcius'"
      ]
     }
    ],
    "source": [
     "c = Convertisseur(10)\n",
-    "print(c.kelvin, c.celcius)"
+    "print(c.kelvin, c.__celcius)"
    ]
   },
   {
