--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 119,
    "id": "1776f3cf-df4c-4c6a-85e7-8b27cb3d4d03",
    "metadata": {},
    "outputs": [
@@ -697,24 +697,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dans get kelvin\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Convertisseur' object has no attribute '__celcius'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[117], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m c \u001b[38;5;241m=\u001b[39m Convertisseur(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(c\u001b[38;5;241m.\u001b[39mkelvin, \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__celcius\u001b[49m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Convertisseur' object has no attribute '__celcius'"
+      "dans get kelvin\n",
+      "283 10\n"
      ]
     }
    ],
    "source": [
     "c = Convertisseur(10)\n",
-    "print(c.kelvin, c.__celcius)"
+    "print(c.kelvin, c._Convertisseur__celcius)"
    ]
   },
   {
@@ -760,8 +750,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "7516d1eb-2b00-447a-9696-be9cce0f39d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_Convertisseur__celcius',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'kelvin']"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a30bd7d6-84df-48b5-905e-a9670de8e067",
    "metadata": {},
    "outputs": [],
    "source": []
