--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -203,7 +203,17 @@
    "id": "41c13eec-0e85-4cb8-be92-b3afe5251b00",
    "metadata": {},
    "source": [
-    "Le -1 vient de cette formalation `l[len(l) - 1]`"
+    "Le -1 vient de cette formulation `l[len(l) - 1]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1f60b2c-41cc-4732-a835-29604f4652f6",
+   "metadata": {},
+   "source": [
+    "## Erreur d'accès aux éléments \n",
+    "\n",
+    "On ne peut pas accéder à un index absent de la liste"
    ]
   },
   {
