--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -265,7 +265,9 @@
    "id": "b4823536-1a2f-4d2e-b47e-84e8fd144aa8",
    "metadata": {},
    "source": [
-    "## Slicing"
+    "## Slicing\n",
+    "\n",
+    "Permet de récupérer des tranches de notre itérable (fonctionne sur les listes, les strings, les tuples, ...) et peux être étendu au python scientifique (numpy, pandas)."
    ]
   },
   {
