--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -447,7 +447,13 @@
    "id": "fc9c9692-3294-4406-b83d-5b7844138774",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Autre technique pour fizz buzz \n",
+    "\n",
+    "On peut le faire sans aucun if ni aucune boucle : \n",
+    "* on utilise des opérations booléennes implicites\n",
+    "* on utilise la fonction `map` "
+   ]
   },
   {
    "cell_type": "code",
