--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -442,17 +442,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc9c9692-3294-4406-b83d-5b7844138774",
+   "cell_type": "markdown",
+   "id": "1f3b487b-41ee-4453-8148-e940de86f756",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Autre technique pour fizz buzz \n",
     "\n",
     "On peut le faire sans aucun if ni aucune boucle : \n",
-    "* on utilise des opérations booléennes implicites\n",
-    "* on utilise la fonction `map` "
+    "* pour enlever les ifs: on utilise des opérations booléennes implicites et de la concaténation de chaine \n",
+    "* pour enlever les boucles : on utilise la fonction `map` "
    ]
   },
   {
