--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -29,6 +29,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72025cd1-1abd-4792-92f7-95e77ed95fd5",
+   "metadata": {},
+   "source": [
+    "# Spécialisation de"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "75d16a99-8c58-48a1-bac3-e4e88bc57c4d",
