--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -33,7 +33,9 @@
    "id": "72025cd1-1abd-4792-92f7-95e77ed95fd5",
    "metadata": {},
    "source": [
-    "# Spécialisation de"
+    "# Spécialisation de fonctions \n",
+    "\n",
+    "On peut spécialiser des fonctions (figer des paramètres) en utilisant `functools.partial` ou une lambda"
    ]
   },
   {
@@ -130,6 +132,11 @@
    "id": "795b9d49-c7fe-4103-8157-d74e4ef0119d",
    "metadata": {},
    "source": [
+    "# Exemples de décorateurs \n",
+    "\n",
+    "En calcul scientifique (`numba.jit`). \n",
+    "\n",
+    "\n",
     "```python \n",
     "@njit\n",
     "def monte_carlo_pi(nsamples):\n",
@@ -141,6 +148,10 @@
     "            acc += 1\n",
     "    return 4.0 * acc / nsamples\n",
     "```\n",
+    "\n",
+    "## Limite du décorateur python par rapport au design pattern decorator\n",
+    "\n",
+    "Par défaut, en python, nous n'avons \n",
     "\n",
     "```python\n",
     "def monte_carlo_pi(nsamples):\n",
