--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -151,7 +151,9 @@
     "\n",
     "## Limite du décorateur python par rapport au design pattern decorator\n",
     "\n",
-    "Par défaut, en python, nous n'avons \n",
+    "Par défaut, en python, nous n'avons plus accès à la fonction décorée d'origine. \n",
+    "\n",
+    "Si on veut y avoir accès, nous ne devons pas utiliser le `@` mais la décorer en appelant le décorateur explicitement. \n",
     "\n",
     "```python\n",
     "def monte_carlo_pi(nsamples):\n",
