--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -172,20 +172,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "81d2bc6e-9976-4ec8-88dc-ff8cb618c2c8",
+   "cell_type": "markdown",
+   "id": "6e74d688-4362-4553-90ff-e09f51aea1bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vide\n",
-      "vide\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Conditions pythoniques ou non pythoniques \n",
+    "\n",
+    "Quand on fait des conditions pour saovir si un conteneur est vide ou pas, on peut tester juste la valeur `truthy` ou `falsey` du conteneur. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78756101-4bf4-4559-bcbd-37eff24dbabc",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ma_liste = []\n",
     "\n",
