--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -257,7 +257,9 @@
    "id": "c641d692-1f63-4041-8869-127a454ba628",
    "metadata": {},
    "source": [
-    "# Décorateurs"
+    "# Décorateurs\n",
+    "\n",
+    "Quand on crée des décorateurs, il ne faut pas oublier de "
    ]
   },
   {
