--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -259,7 +259,7 @@
    "source": [
     "# Décorateurs\n",
     "\n",
-    "Quand on crée des décorateurs, il ne faut pas oublier de \"maquiller\" le wrapper comme la fonction d'origine (mettre à jour la doc, "
+    "Quand on crée des décorateurs, il ne faut pas oublier de \"maquiller\" le wrapper comme la fonction d'origine (mettre à jour la doc, le nom, ...) => on utilise `functools.wraps`."
    ]
   },
   {
