--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -397,6 +397,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a09ceb95-87b3-4f09-bde9-cecaaf407c66",
+   "metadata": {},
+   "source": [
+    "# Args et kwargs\n",
+    "\n",
+    "`print` peut accepter autant de paramètres que l'on veut lui en passer, comment cela fonctionne ? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "0b5c71ca-f2e8-489a-92a8-6d83d6acd9be",
@@ -474,6 +484,16 @@
     "print(a)\n",
     "print(b)\n",
     "print(args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c267a857-4c5c-4189-ba71-4bdcecf84103",
+   "metadata": {},
+   "source": [
+    "# Choix du type entre tuple, dictionnaire et liste\n",
+    "\n",
+    "En python,"
    ]
   },
   {
