--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -493,7 +493,10 @@
    "source": [
     "# Choix du type entre tuple, dictionnaire et liste\n",
     "\n",
-    "En python,"
+    "En python ce choix ce fait selon 3 critères : \n",
+    "* la practicité de manipulation\n",
+    "* la \n",
+    "* le message que l'on veut envoyer aux autres développeurs (utiliser explicitement un tuple va faire réfléchir à pourquoi on ne peut pas modifier les données)"
    ]
   },
   {
