--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -495,8 +495,11 @@
     "\n",
     "En python ce choix ce fait selon 3 critères : \n",
     "* la practicité de manipulation\n",
-    "* la \n",
-    "* le message que l'on veut envoyer aux autres développeurs (utiliser explicitement un tuple va faire réfléchir à pourquoi on ne peut pas modifier les données)"
+    "* l'impossibilité d'utiliser autre chose (par exemple les clés de dictionnaires doivent être immutables)\n",
+    "* le message que l'on veut envoyer aux autres développeurs (utiliser explicitement un tuple va faire réfléchir à pourquoi on ne peut pas modifier les données)\n",
+    "\n",
+    "\n",
+    "Exemple : on cherche à modéliser ces données : "
    ]
   },
   {
