--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -541,6 +541,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac245eef-3243-44ee-bb49-4a80d9cf4931",
+   "metadata": {},
+   "source": [
+    "Les tuples permettent de forcer l'immutabilité des objets "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "f612d495-b49a-49f9-a4d5-92bc71dde0a6",
