--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -577,17 +577,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 218,
    "id": "01564572-a347-4a8d-9e1b-9a4023d9ba4b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Falce', 'Matthieu', '26/11'], ['Poirier', 'Cyrille']]"
+       "[('Falce', 'Matthieu'), ('Poirier', 'Cyrille')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
