--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -597,6 +597,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c7372d1-d157-445c-9814-fbe7cfcd3b1e",
+   "metadata": {},
+   "source": [
+    "# Gestion des paramètres, nommés et positionnels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "1ba1baf5-0eaa-462e-b052-8c589d12515e",
