--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -689,6 +689,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc1a176a-9e39-4381-a75f-3d0424772c4b",
+   "metadata": {},
+   "source": [
+    "# Manipulation des zips \n",
+    "\n",
+    "On peut parcourir plusieurs itérateurs simultanément grâce à `zip`, c'est ce qu'utilise `map` pour accepter plusieurs itérable contenant tous les "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 84,
    "id": "14c16759-e207-498d-9cb9-2275a72b1068",
