--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -695,7 +695,7 @@
    "source": [
     "# Manipulation des zips \n",
     "\n",
-    "On peut parcourir plusieurs itérateurs simultanément grâce à `zip`, c'est ce qu'utilise `map` pour accepter plusieurs itérable contenant tous les "
+    "On peut parcourir plusieurs itérateurs simultanément grâce à `zip`, c'est ce qu'utilise `map` pour accepter plusieurs itérable contenant chacun des paramètres. "
    ]
   },
   {
