--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -890,24 +890,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 131,
-   "id": "ea66aa5e-c8e7-4050-911d-46206a3c31e8",
+   "cell_type": "markdown",
+   "id": "f257373c-40f6-4987-b3e9-b8d8ad3f6b97",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2083159520034149441"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "hash(\"toto\") => \"toto\".__hash__()"
+    "# Délégation de responsabilités \n",
+    "\n",
+    "La plupart des fonctions de la bibliothèque standart va\n",
+    "\n",
+    "```\n",
+    "hash(\"toto\") => \"toto\".__hash__()\n",
+    "```"
    ]
   },
   {
