--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -896,11 +896,19 @@
    "source": [
     "# Délégation de responsabilités \n",
     "\n",
-    "La plupart des fonctions de la bibliothèque standart va\n",
+    "La plupart des fonctions de la bibliothèque standart vont déléguer leur logique à une méthode magique définie dans l'objet :\n",
     "\n",
     "```\n",
     "hash(\"toto\") => \"toto\".__hash__()\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cca1ac8-5ad6-485e-834d-21c77233a2d4",
+   "metadata": {},
+   "source": [
+    "# Caching et décorateurs "
    ]
   },
   {
@@ -1283,26 +1291,6 @@
    "source": [
     "addition(1, 1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "id": "285a94ca-a31a-4adc-af0f-46858da6979b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "None (<string>)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[1;32m~/anaconda3/envs/formation_ing/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3553\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[0;36m  Cell \u001b[0;32mIn[202], line 1\u001b[0;36m\n\u001b[0;31m    raise IndentationError\u001b[0;36m\n",
-      "\u001b[0;36m  File \u001b[0;32m<string>\u001b[0;36m\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
