--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -5,6 +5,8 @@
    "id": "8e879a8a-a1be-49f1-8f7d-1b4692309f28",
    "metadata": {},
    "source": [
+    "# A voir dans la journée : \n",
+    "\n",
     "```\n",
     "# OOP\n",
     "    * properties\n",
