--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -33,7 +33,6 @@
     "\n",
     "* décorateurs\n",
     "    * recoder le cache\n",
-    "    * \n",
     "* arguments de fonctions (`*args / **kwargs`)\n",
     "    * `*args` : arguments positionnels\n",
     "    * `**kwargs` : arguments nommés\n",
@@ -42,9 +41,9 @@
     "* exceptions\n",
     "    * `raise` (permet de lever une exception spécifique)\n",
     "    * gestion d'exception :\n",
-    "        * `try` : le plus spécifique, on isole les points d'exceptions\n",
-    "        * `except` : \n",
-    "        * `else`\n",
+    "        * `try` : le plus spécifique posible sur le code qu'il englobe, on isole les points d'exceptions\n",
+    "        * `except` : être le plus précis possible sur l'exception que l'on capture, utiliser plusieurs clauses except si nécessaire pour capturer plusieurs types d'exception\n",
+    "        * `else` : reste \n",
     "        * `finally`"
    ]
   },
