--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -43,8 +43,8 @@
     "    * gestion d'exception :\n",
     "        * `try` : le plus spécifique posible sur le code qu'il englobe, on isole les points d'exceptions\n",
     "        * `except` : être le plus précis possible sur l'exception que l'on capture, utiliser plusieurs clauses except si nécessaire pour capturer plusieurs types d'exception\n",
-    "        * `else` : reste \n",
-    "        * `finally`"
+    "        * `else` : code exécuté si aucune exception n'est levée \n",
+    "        * `finally` : code exécuté dans tous les cas "
    ]
   },
   {
