--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -80,6 +80,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d34a6882-6d82-4875-a1fc-e91c4e3a3509",
+   "metadata": {},
+   "source": [
+    "# Imports\n",
+    "\n",
+    "En python on peut importer des bibliothèques depuis n'importe où. \n",
+    "\n",
+    "Mais la bienséance veut qu'on le fasse : \n",
+    "\n",
+    "* en début de fichier (99% des cas)\n",
+    "* "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "0c6cc5a8-2e8a-4015-a611-7b7ea61f7312",
