--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -91,12 +91,14 @@
     "Mais la bienséance veut qu'on le fasse : \n",
     "\n",
     "* en début de fichier (99% des cas)\n",
-    "* "
+    "* en dernier recours à l'intérieur d'une fonction (au début)\n",
+    "\n",
+    "La bibliothèque importée sera mise en cache et ne sera pas ré-importée lors d'un appel suivant. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 124,
    "id": "0c6cc5a8-2e8a-4015-a611-7b7ea61f7312",
    "metadata": {},
    "outputs": [],
@@ -105,9 +107,9 @@
     "\n",
     "for i in range(10):\n",
     "    if random.random() > 0.5:\n",
-    "        import os \n",
+    "        import os as plop\n",
     "    else:\n",
-    "        import sys \n",
+    "        import sys as plop\n",
     "\n",
     "\n",
     "def f():\n",
