--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -136,6 +136,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3288f1ad-d2c9-42ac-82cb-85882ca1f381",
+   "metadata": {},
+   "source": [
+    "## On peut importer un module ou juste une fonction du module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "9fd44a02-0874-4591-bed9-750b6736e19c",
@@ -186,6 +194,8 @@
    "id": "5a4fca5d-8537-44f7-b59c-1b81e7d9c760",
    "metadata": {},
    "source": [
+    "## On peut renommer un module importé pour éviter les masquages\n",
+    "\n",
     "```\n",
     "from math import cos as math_cos\n",
     "from numpy import cos as numpy_cos \n",
