--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -207,6 +207,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "233703bb-74ab-4789-a1a5-71a3ca69052d",
+   "metadata": {},
+   "source": [
+    "## Masquage des builtins par des variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "4ae00926-7f00-4e61-84c5-7497e3c6a3f6",
@@ -352,6 +360,14 @@
    "metadata": {},
    "source": [
     "matthieu.presente() <=> type(matthieu) => Personne => (methode de classe) Personne.presente(type(matthieu))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79ab3c2f-5b29-48b1-8497-9973e46bb765",
+   "metadata": {},
+   "source": [
+    "Le context manager va tester si la "
    ]
   },
   {
