--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -367,7 +367,7 @@
    "id": "79ab3c2f-5b29-48b1-8497-9973e46bb765",
    "metadata": {},
    "source": [
-    "Le context manager va tester si la "
+    "Le context manager va tester si l'objet possède ce qu'il faut (dans ce genre là) :"
    ]
   },
   {
