--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1425,9 +1425,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4e6ad12-8774-44dd-a00f-d3e073a374fa",
+   "metadata": {},
+   "source": [
+    "Voilà comment fonctionnent les objets en python et pourquoi `self` est toujours passé en \n",
+    "\n",
+    "`matthieu.presente() <=> type(matthieu) => Personne => (methode de classe) Personne.presente(type(matthieu))`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "892f3377-d1bb-47a0-9dcf-926f9773b191",
+   "id": "7f3deb21-3537-4f2f-b79e-f9086f92f6c6",
    "metadata": {},
    "outputs": [],
    "source": []
