--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1429,9 +1429,9 @@
    "id": "c4e6ad12-8774-44dd-a00f-d3e073a374fa",
    "metadata": {},
    "source": [
-    "Voilà comment fonctionnent les objets en python et pourquoi `self` est toujours passé en \n",
+    "Voilà comment fonctionnent les objets en python et pourquoi `self` est toujours passé en premier paramètre. Lors de l'appel d'une méthode, l'interpréteur va faire ça : \n",
     "\n",
-    "`matthieu.presente() <=> type(matthieu) => Personne => (methode de classe) Personne.presente(type(matthieu))`"
+    "`matthieu.presente() <=> type(matthieu) == Personne => Personne.presente(matthieu)`"
    ]
   },
   {
