--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -543,14 +543,20 @@
     "    with open(filename) as f:\n",
     "        return deque(f, n)\n",
     "\n",
-    "p = pathlib.Path(\".\") \n",
-    "path = p / \"example_path.py\"\n",
     "tail(path, 4)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45189ec6-094e-4ff5-9fe2-0a481d6df32a",
+   "metadata": {},
+   "source": [
+    "Pour les noms de fichiers, on peut utiliser la `pathlib` pour les gérer plus facilement "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 128,
    "id": "9e9e9e6d-6543-4012-a2c3-2f66d406722f",
    "metadata": {},
    "outputs": [
@@ -560,14 +566,26 @@
        "PosixPath('example_path.py')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "p = pathlib.Path(\".\") \n",
+    "path = p / \"example_path.py\"\n",
+    "\n",
+    "# quand on appelle p / \"example\", voilà ce que fait l'interpréteur\n",
     "pathlib.Path.__truediv__(p, \"example_path.py\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6925beae-8454-44c2-82bd-bb90cc70d95f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
