--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -580,12 +580,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6925beae-8454-44c2-82bd-bb90cc70d95f",
+   "cell_type": "markdown",
+   "id": "1d110997-895c-4c83-8cd6-9d38bfcb0dc5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# POO et encapsulation \n",
+    "\n",
+    "On peut utiliser les `properties` pour simuler des getters et setters. On peut également avoir des varaibles préfixées par des `_` pour signifier qu'elles sont privées et par des `__` pour que l'interpréteur les camoufle pour rendre leur accès extérieur plus difficile. "
+   ]
   },
   {
    "cell_type": "code",
